--- a/Impact_model_method/10Impact_model.Rmd
+++ b/Impact_model_method/10Impact_model.Rmd
@@ -40,31 +40,31 @@ a) checking for normality...
 par(mfrow=c(2,5))
 hist(weekly$Chla_ugL, breaks=18,#histograph of Chl-a
      main="non-transformed",
-     xlab="Chl-a (ug/L)") 
+     xlab="Chl-a") 
 hist(weekly$CD_cellsmL, breaks=18,#histograph of CD
      main="non-transformed",
-     xlab="CD (cells/mL)") 
-hist(weekly$avg_Pext, breaks=18,#histogrpah of P_ext
+     xlab="CD") 
+hist(weekly$Pext, breaks=18,#histogrpah of P_ext
      main="non-transformed",
-     xlab="P_ext (kg)") 
-hist(weekly$avg_Pint, breaks=18,#histograph of P_int
+     xlab="P_ext") 
+hist(weekly$Pint, breaks=18,#histograph of P_int
      main="non-transformed",
-     xlab="P_int (kg)") 
+     xlab="P_int") 
 hist(weekly$avgTotP_HEratio, breaks=18,#histograph of P_hypo_epi
      main="non-transformed",
      xlab="P_hypo:P_epi") 
 hist(log10(weekly$Chla_ugL), breaks=18,#histograph of log10(Chl-a)
      main="log-transformed",
-     xlab="Chl-a (ug/L)") 
+     xlab="Chl-a") 
 hist(log10(weekly$CD_cellsmL), breaks=18,#histograph of log10(CD)
      main="log-transformed",
-     xlab="CD (cells/mL)") 
-hist(log10(weekly$avg_Pext), breaks=18,#histograph of log10(P_ext)
+     xlab="CD") 
+hist(log10(weekly$Pext), breaks=18,#histograph of log10(P_ext)
      main="log-transformed",
-     xlab="P_ext (kg)") 
-hist(log10(weekly$avg_Pint), breaks=18,#histograph of log10(P_int)
+     xlab="P_ext") 
+hist(log10(weekly$Pint), breaks=18,#histograph of log10(P_int)
      main="log-transformed",
-     xlab="P_int (kg)") 
+     xlab="P_int") 
 hist(log10(weekly$avgTotP_HEratio), breaks=18,#histograph of log10(P_hypo:epi)
      main="log-transformed",
      xlab="P_hypo:P_epi") 
@@ -78,128 +78,53 @@ b) checking lags...
 
 ```{r}
 ### vary lags ###
-test_k<- glm(formula=CD_cellsmL~lag(avgTotP_HEratio, n=4), data=weekly) #data frame
+test_k<- glm(formula=CD_cellsmL~log10(Pint_k28), data=weekly) #data frame
 summary(lm(test_k))
 ```
 
 Predictor lags defined.
 
-# Step 3. Run regressions:
+# Step 3. Run regression:
 
-a) model 1: CD_t ~ CD_t-k + log10(P_ext,t-k) + log10(Pint, t-k) + error
+a) running model: CD_t ~ CD_t-k + log10(P_ext,t-k) + log10(P_int, t-k) + error
 
 ```{r}
-### remove outliers, if necessary ###
-inputs<- weekly[-c(19), ]
+### remove outliers as needed ###
+#inputs<- weekly[-c(22, 26),]
 
 ### define the model ###
-regka_CD<- glm(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=inputs)
+regka_CD<- glm(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=weekly)
 
 ### print model AIC ###
 summary(regka_CD)
 
 ### print model R^2 ###
 summary(lm(regka_CD))
+```
+
+Model defined.
+
+b) running model diagnostics...
+
+```{r}
+### plot expected vs observed ###
+plot(x=predict(regka_CD), y=weekly$CD_cellsmL, 
+    xlab="Predicted Values", ylab="Observed Values")
+abline(a=0,b=1) #add 1:1 line to plot
 
 ### print model VIFs ###
 vif(regka_CD) #prints the VIFs 
 
 ### print model diagnostics ###
-png(file="Products/SI_figures/Figure20.png", width=750, height=500) #open png file
+png(file="Products/SI_figures/Figure14_color.png", width=750, height=500) #open png file
 layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-fig20<-plot(regka_CD) #creates plot
+SIfig14<-plot(regka_CD) #creates plot
+SIfig14
 dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
 Model diagnostics complete.
-
-b) model 2: CD_t ~ CD_t-k + log10(P_extnoother,t-k) + log10(P_int,t-k) + error
-
-```{r}
-### remove outliers, if necessary ###
-#inputs<- all[-c(19),]
-
-### define the model ###
-regkb_CD<- glm(formula=CD_cellsmL~lag(CD_cellsmL, n=1)+ log10(lag(avg_Pextnoother, n=4))+ log10(lag(avg_Pint, n=4)),
-data=inputs)
-
-### print model AIC ###
-summary(regkb_CD)
-
-### print model R^2 ###
-summary(lm(regkb_CD))
-
-### print model VIFs ###
-vif(regkb_CD) 
-
-### print model diagnostic plots ###
-png(file="Products/SI_figures/Figure21.png", width=750, height=500) #open png file
-layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-fig21<-plot(regkb_CD) #creates plot
-dev.off() #closes the file
-par(mfrow=c(1,1))
-```
-
-Model diagnostics complete.
-
-c) model 3: CD_t ~ CD_t-7 + log10(P_ext,t-k) + P_hypo:P_epiP,t-k + error
-
-```{r}
-### remove outliers ###
-#inputs<- weekly[-c(19), ]
-
-### define the model ###
-regkc_CD<-glm(formula=CD_cellsmL~lag(CD_cellsmL, n=1)+ log10(lag(avg_Pext, n=4))+ lag(avgTotP_HEratio, n=3), data=inputs)
-
-### print model AIC ###
-summary(regkc_CD)
-
-### print model R^2 ###
-summary(lm(regkc_CD))
-
-### print model VIFs ###
-vif(regkc_CD)
-
-### print model diagnostic plots ###
-png(file="Products/SI_figures/Figure22.png", width=750, height=500) #open png file
-layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-fig22<-plot(regkc_CD) #creates plot
-dev.off() #closes the file
-par(mfrow=c(1,1))
-```
-
-Model diagnostics complete.
-
-d) model 4: Chla_t ~ Chla_t-k + log10(P_ext,t-k) + log10(Pint,t-k) + error
-
-```{r}
-### remove outliers, if necessary ###
-inputs<- weekly[-c(19, 28, 29), ]
-
-### define the model ###
-regka_CD<- glm(formula=Chla_ugL~lag(Chla_ugL, n=1)+log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=inputs)
-
-### print model AIC ###
-summary(regka_CD)
-
-### print model R^2 ###
-summary(lm(regka_CD))
-
-### print model VIFs ###
-vif(regka_CD) #prints the VIFs 
-
-### print model diagnostics ###
-png(file="Products/SI_figures/Figure23.png", width=750, height=500) #open png file
-layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-fig23<-plot(regka_CD) #creates plot
-dev.off() #closes the file
-par(mfrow=c(1,1))
-```
-
-Model diagnostics complete.
-
-Pick the model with the lowest AIC, Residual standard error, and each term is significant (t-score p-value < 0.05) as the best model.
 
 # Step 4. Calculate the partial sum squares for each year:
 
@@ -207,42 +132,42 @@ a) calculating partial squares for each year...
 
 ```{r}
 ### define the model ###
-YRregk_CD_2013<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=subset(weekly, Yr==2013)) #subset data by year
+YRregk_CD_2013<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=subset(weekly, Yr==2013)) #subset data by year
             
 ### print the Sum of Squares as table ###
 SS_2013<- summary(YRregk_CD_2013)
 impact2013<- data.frame(SS_2013[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 ### define the model ###
-YRregk_CD_2014<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=subset(weekly, Yr==2014)) #subset data by year
+YRregk_CD_2014<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=subset(weekly, Yr==2014)) #subset data by year
 
 ### print the Sum of Squares as table ###
 SS_2014<- summary(YRregk_CD_2014)#prints the sum of squares for the regression 
 impact2014<- data.frame(SS_2014[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 ### define the model ###
-YRregk_CD_2015<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=subset(weekly, Yr==2015)) #subset data by year
+YRregk_CD_2015<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=subset(weekly, Yr==2015)) #subset data by year
 
 ### print the Sum of Squares as table ###
 SS_2015<- summary(YRregk_CD_2015)#prints the sum of squares for the regression 
 impact2015<- data.frame(SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 ### define the model ###
-YRregk_CD_2016<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=subset(weekly, Yr==2016)) #subset data by year
+YRregk_CD_2016<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=subset(weekly, Yr==2016)) #subset data by year
 
 ### print the Sum of Squares as table ###
 SS_2016<- summary(YRregk_CD_2016)#prints the sum of squares for the regression 
 impact2016<- data.frame(SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 ### define the model ###
-YRregk_CD_2017<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)),  data=subset(weekly, Yr==2017)) #subset data by year
+YRregk_CD_2017<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28),  data=subset(weekly, Yr==2017)) #subset data by year
 
 ### print the Sum of Squares as table ###
 SS_2017<- summary(YRregk_CD_2017)#prints the sum of squares for the regression 
 impact2017<- data.frame(SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 ### define the model ###
-YRregk_CD_2018<- aov(formula=CD_cellsmL~lag(CD_cellsmL,n=1)+ log10(lag(avg_Pext, n=4))+ log10(lag(avg_Pint, n=4)), data=subset(weekly, Yr==2018)) #subset data by year
+YRregk_CD_2018<- aov(formula=CD_cellsmL~log10(Pint_k21)+log10(Pext_k28), data=subset(weekly, Yr==2018)) #subset data by year
 
 ### print the Sum of Squares as table ###
 SS_2018<- summary(YRregk_CD_2018)#prints the sum of squares for the regression 
@@ -256,22 +181,23 @@ b) merging the Sum Squares tables into one data file...
 ```{r}
 ### merging the Sum Squares tables ###
 Model_output_CD<- cbind(impact2013, impact2014, impact2015, impact2016, impact2017, impact2018) #combines all tables together
-Model_output_CD$Sum_Sq_part<- c("Seed stock", "External load", "Internal load", "Residual") #add column with predictor name
+Model_output_CD$Sum_Sq_part<- c("Internal load","External load",  "Residual") #add column with predictor name
 colnames(Model_output_CD)<- c("2013", "2014", "2015", "2016", "2017", "2018", "Sum_Sq_part") # renames columns with year for sum squares
 
 ### save SS table as new data file ###
-write.csv(Model_output_CD, file="Products/Figure5_data.csv")
+write.csv(Model_output_CD, file="Products/Figure3_data.csv")
 
 ### print SS table as bar plot ###
 CD_table<- melt(Model_output_CD, id.vars="Sum_Sq_part", variable.name = "Year", value.name = "PSS") %>%
-  mutate(Sum_Sq_part=factor(Sum_Sq_part, levels=c("Residual", "Seed stock","External load",  "Internal load"), ordered=TRUE))
-fig5<- ggplot(data=CD_table, aes(y=PSS, x=Year, pattern=Sum_Sq_part, fill=Sum_Sq_part), color="black") +
+  mutate(Sum_Sq_part=factor(Sum_Sq_part, levels=c("Residual", "External load",  "Internal load"), ordered=TRUE))
+fig3a<- ggplot(data=CD_table, aes(y=PSS, x=Year, pattern=Sum_Sq_part, fill=Sum_Sq_part)) +
   geom_bar_pattern(position="fill", stat="identity") +
-  labs(y="Sum of Squares for Regression", pattern="Predictor",) +
+  labs(y="Sum of Squares for Regression", pattern="Predictor",title="a) Baseline") +
   guides(fill="none") +
-  scale_pattern_manual(values=c("crosshatch", "stripe","wave","circle"))
-fig5
-ggsave(fig5, file="Products/Figure5_color.png")
+  theme(legend.position="bottom")+
+  scale_pattern_manual(values=c("stripe","wave","circle"))
+fig3a
+ggsave(fig3a, file="Products/Figure3a_color.png")
 ```
 
 Yearly source-attributed impact outputted.
